# tauri-plugin-nosleep

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: clippy.yml  format.yml  tag-new-version.yml  typescript.yml
examples/svelte-app/: package.json
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/capabilities/: migrated.json
examples/svelte-app/src-tauri/src/: main.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_alias.toml
permissions/schemas/: schema.json
src/: lib.rs
